<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="User Settings"
        android:persistent="true">


        <SwitchPreferenceCompat
            android:icon="@drawable/ic_volume"
            android:key="@string/preferencekey_sound"
            android:summary="Audio feedback for some buttons"
            android:title="Enable Sounds" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_animation_icon"
            android:key="@string/preferencekey_animate"
            android:title="Enable Animations"
            android:summary="Larger work-in-progress animations"
            android:defaultValue="false"/>


        <androidx.preference.DropDownPreference
            android:key="@string/preferencekey_theme"
            android:entries="@array/settings_theme_entries"
            android:entryValues="@array/settings_theme_values"
            android:defaultValue="Light"
            app:defaultValue="Light"
            android:title="Theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="About the App">

        <Preference
            android:key="@string/preferencekey_version"
            android:title="Version"
            android:summary="1.0"/>

        <Preference
            android:key="@string/preferencekey_feedback"
            android:title="Send feedback"
            android:summary="Report technical issues or suggest new features">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/atakemori/Braille/issues/new"/>
        </Preference>

        <Preference
            android:key="@string/preferencekey_privacy"
            android:summary=""
            android:title="Privacy Policy" />

        <Preference
            android:key="@string/preferencekey_github"
            android:title="Source Code"
            android:summary="Open: github.com/atakemori/Braille">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/atakemori/Braille"/>
        </Preference>


        <!--Preference
            android:key="library"
            android:title="Libraries and Acknowledgements"
            android:summary=""/> -->


    </PreferenceCategory>


</androidx.preference.PreferenceScreen>